# Recipick

./: .gitignore  app.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: android-playstore-deploy.yml  deploy.yml  terraform.yml
app/category/: [name].tsx
backend/: .env  API_SPEC.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/llm_worker/: worker.py
backend/app/llm_worker/services/: extraction_service.py
backend/app/main_api/: main.py
backend/app/main_api/dependencies/: auth.py
backend/app/main_api/routers/: ai_router.py  auth_router.py  ingredient_router.py  recipe_router.py  system_router.py  user_router.py
backend/app/main_api/schemas/: ai_schema.py  auth_schema.py  recipe_schema.py  user_schema.py
backend/app/main_api/services/: ai_service.py  auth_service.py  recipe_service.py  user_service.py
backend/app/shared/: config.py
backend/app/shared/models/: recipe_model.py
backend/app/shared/repositories/: rate_limit_repo.py  recipe_repo.py  user_repo.py
backend/app/shared/utils/: firebase_auth.py  recipe_normalizer.py
backend/postman/: Recipick_API.postman_collection.json
backend/scripts/: backfill_channel_avatars.py
backend/tests/: conftest.py  test_ai_api.py  test_auth_api.py  test_recipe_api.py  test_recipe_service.py  test_user_api.py
docs/: gesture.html
frontend/: GoogleService-Info.plist  app.json  google-services.json  package-lock.json  package.json
frontend/android/: .gitignore  build.gradle  (+2 more)
terraform/: main.tf  outputs.tf  variables.tf
(+56 files in other folders)
