[tool.poetry]
name = "recipick-backend"
version = "0.1.0"
description = "Recipick API and SQS Worker for Serverless Deployment"
authors = ["Admin <admin@recipick.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
mangum = "^0.17.0"
boto3 = "^1.34.0"
google-genai = "^0.5.0"
pydantic = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"